--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+asgiref==3.5.2
 autopep8==1.7.0
+coverage==6.4.4
+Django==4.1
+djangorestframework==3.13.1
 flake8==5.0.4
 flake8-broken-line==0.5.0
 flake8-isort==4.2.0
@@ -9,4 +13,7 @@ mccabe==0.7.0
 pep8-naming==0.13.2
 pycodestyle==2.9.1
 pyflakes==2.5.0
+pytz==2022.2.1
+sqlparse==0.4.2
 toml==0.10.2
+tzdata==2022.2
